# career_ops

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
app/: logging_setup.py  settings.py
app/application/: README.md  confirmation.py
app/models/: README.md  __init__.py  application.py  candidate.py  email.py  interfaces.py  job.py  linkedin_config.py  linkedin_result.py  screening.py
app/prompts/: README.md
app/screening/: README.md  __init__.py  enrich.py  filter.py  rank.py
app/services/: README.md  browser.py  email.py
app/sources/: README.md  __init__.py
app/utils/: README.md  retry.py
config/: app.template.yaml
docs/: architecture.md  easy-apply.md  external-apply.md  logging.md  overview.md  pipeline.md
docs/llm/: jd-enrichment.md  ranking.md  title-triage.md
job_finding_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: _bootstrap.py  pipeline.py
scripts/confirmation/: email.py  ui.py  watcher.py
scripts/connection/: browser.py  email.py
scripts/easy_apply/: preview_batch.py  probe.py  review.py  submit.py
scripts/external_apply/: audit.py  browser_use_probe.py
scripts/screening/: detail_fetch.py  jd_enrichment.py  ranking.py  title_triage.py
scripts/source/: browser.py  email.py
scripts/storage/: __init__.py  init_db.py  view_db.py
tests/config/: test_app_config.py
tests/linkedin/: test_detail_extract.py  test_easy_apply_confirmation.py  test_easy_apply_probe.py  test_easy_apply_review.py  test_easy_apply_service.py  test_external_apply_audit.py  test_jd_enrichment_service.py  (+3 more)
(+72 files in other folders)
