[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-finding-agent"
version = "0.1.0"
description = "Prototype backend for a job-finding and application-assist system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "google-adk>=1.13.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "playwright>=1.53.0,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app", "app.*", "scripts", "scripts.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
